--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>deryas krasses portfolio</title>
+
+    <link rel="stylesheet" href="design.css" type="text/css"  
 </head>
 <body>
-    hello world
+    <div>Ich bin der Inhalt</div>
+    <div>Ich bin der Inhalt2</div>
+
+
+
 </body>
+
+
 </html>
