--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="design.css" type="text/css"  
 </head>
 <body>
-    <div>Ich bin der Inhalt</div>
-    <div>Ich bin der Inhalt2</div>
+<h1>Portfolio Derya</h1>
+
+    <div class="box1">Ich bin der Inhalt</div>
+    <div class="box2">Ich bin der Inhalt2</div>
+    <div class="box3">Ich bin der Inhalt3</div>
+
 
 
 
