--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>deryas krasses portfolio</title>
 
-    <link rel="stylesheet" href="design.css" type="text/css"  
+    <link rel="stylesheet" href="design.css" type="text/css" >
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> 
 </head>
 <body>
-<h1>Portfolio Derya</h1>
 
-    <div class="box1">Ich bin der Inhalt</div>
-    <div class="box2">Ich bin der Inhalt2</div>
-    <div class="box3">Ich bin der Inhalt3</div>
+    <a-scene>
+        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-sky color="#ECECEC"></a-sky>
+      </a-scene>
+    
 
 
 
