--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@
 </head>
 <body>
 
-    <a-scene>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
+<a-scene  antialias="true"  fog="type: linear; color: #000; near: 3; far: 30"  loading-screen="dotsColor: #000; backgroundColor: black" shadow="type: pcfsoft">
+
+<assets>
+    <img id="open-stars" src="assets/open-stars.jpg">
+    <img id="erde" src="assets/erde.jpg">
+    <img id="universe" src="assets/universe.jpg">
+    <img id="ua" src="assets/ua.jpg">
+    <img id="ub" src="assets/ub.jpg">
+    <img id="uc" src="assets/uc.jpg">
+    <img id="ud" src="assets/ud.jpg">
+</assets>
+
+    <!--<a-entity id="camera" camera look-controls wasd-controls position="0 0 0">
+    </a-entity>-->
+
+        <a-entity light="type: hemisphere; color: #fff; groundColor: #333; intensity: 0.5" ></a-entity>
+        <a-entity light="type:directional; castShadow:true;" position="10 10 30" intensity="0.5"></a-entity>
+
+        <a-box position="-2 0 -3" rotation="0 0 20" material="src:#ua" shadow="cast: true; receive: false"></a-box>
+        <a-box position="0 0.5 -4" rotation="0 0 20" material="src:#universe" shadow="cast: true; receive: false"></a-box>
+        <a-box position="2 0.7 -5" rotation="0 0 20" material="src: #ud" shadow="cast: true; receive: false"></a-box>
+        <a-box position="-1 1 -3" rotation="40 0 0" material="src: #uc" shadow="cast: true; receive: false"></a-box>
+        <a-box position="1 0.3 -3" rotation="40 0 0" material="src: #erde" shadow="cast: true; receive: false"></a-box>
+
+        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" material="src: #open-stars; side: double" shadow="cast: true; receive: false"></a-plane>
+        <a-sky color="#000"></a-sky>
       </a-scene>
     
 
